Adds testinomal page

--- a/blog.html
+++ b/blog.html
@@ -47,43 +47,32 @@
 
             <section class="story-content">
                 <img src="assets/founder.png" alt="AMARA Founder" class="story-image">
-                <div class="story-quote">
-                    <svg width="115" height="86" viewBox="0 0 115 86" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path opacity="0.2"
-                            d="M91.9965 85.8754C82.5158 85.8754 75.7439 82.828 71.6807 76.7333C67.6176 70.4128 65.586 63.7538 65.586 56.7561C65.586 50.8871 66.4889 44.7924 68.2947 38.4719C70.1006 31.9257 72.9222 25.7181 76.7597 19.8491C80.5971 13.9801 85.5632 9.23973 91.6579 5.62803C97.9784 2.01634 105.54 0.210491 114.344 0.210491C114.57 0.210491 114.57 1.11342 114.344 2.91927C114.344 4.72511 114.344 6.64382 114.344 8.6754C114.344 10.4812 114.344 11.3842 114.344 11.3842C114.344 11.3842 113.102 11.8356 110.619 12.7386C108.136 13.4158 105.202 14.883 101.816 17.1403C98.4298 19.1719 95.4953 22.1064 93.0123 25.9438C90.5293 29.7813 89.2877 34.7473 89.2877 40.8421C89.7392 40.6163 90.3035 40.5035 90.9807 40.5035C91.6579 40.5035 92.2222 40.5035 92.6737 40.5035C99.2199 40.5035 104.412 42.5351 108.249 46.5982C112.312 50.6614 114.344 55.8532 114.344 62.1737C114.344 69.1713 112.199 74.9275 107.911 79.4421C103.847 83.731 98.5427 85.8754 91.9965 85.8754ZM26.6474 85.8754C17.1667 85.8754 10.3947 82.828 6.33158 76.7333C2.26842 70.4128 0.236844 63.7538 0.236844 56.7561C0.236844 50.8871 1.13977 44.7924 2.94562 38.4719C4.75147 31.9257 7.5731 25.7181 11.4105 19.8491C15.248 13.9801 20.214 9.23973 26.3088 5.62803C32.6292 2.01634 40.1912 0.210491 48.9947 0.210491C49.2205 0.210491 49.2205 1.11342 48.9947 2.91927C48.9947 4.72511 48.9947 6.64382 48.9947 8.6754C48.9947 10.4812 48.9947 11.3842 48.9947 11.3842C48.9947 11.3842 47.7532 11.8356 45.2702 12.7386C42.7871 13.4158 39.8526 14.883 36.4667 17.1403C33.0807 19.1719 30.1462 22.1064 27.6632 25.9438C25.1801 29.7813 23.9386 34.7473 23.9386 40.8421C24.3901 40.6163 24.9544 40.5035 25.6316 40.5035C26.3088 40.5035 26.8731 40.5035 27.3246 40.5035C33.8708 40.5035 39.0626 42.5351 42.9 46.5982C46.9632 50.6614 48.9947 55.8532 48.9947 62.1737C48.9947 69.1713 46.8503 74.9275 42.5614 79.4421C38.4983 83.731 33.1936 85.8754 26.6474 85.8754Z"
-                            fill="#36454F" />
-                    </svg>
-                    <p class="quote-text">As I sat down to reflect on the journey of building AMARA, I find myself
-                        deeply moved by the stories, strength and resilience of countless women who have shaped not just
-                        this brand, but my very purpose behind creating it.</p>
-                    <p class="quote-text">Growing up in India, I was no stranger to the silence and stigma that often
-                        surrounds menstruation. It was something we whispered about, something that came with shame,
-                        discomfort, and a sense of inconvenience. I saw how young girls were often unprepared,
-                        misinformed, or even excluded from daily life during their periods — not because they were
-                        unwell, but simply because society conditioned them to feel that way.</p>
-                    <p class="quote-author">Isha Qureshi</p>
-                    <p class="quote-title">Founder of AMARA</p>
+                <div class="content-text">
+                    <h2>A Journey of Purpose: The Story Behind AMARA</h2>
+                    <p class="author-byline">By Isha Qureshi, Founder, AMARA</p>
+                    <p>As I sit down to reflect on the journey of building AMARA, I find myself deeply moved by the stories, strength, and resilience of countless women who have shaped not just this brand, but my very purpose behind creating it.</p>
+                    <p>Growing up in India, I was no stranger to the silence and stigma that often surrounds menstruation. It was something we whispered about, something that came with shame, discomfort, and a sense of inconvenience. I saw how young girls were often unprepared, misinformed, or even excluded from daily life during their periods — not because they were unwell, but simply because society conditioned them to feel that way.</p>
+                    <p>That reality never sat right with me. Over time, this discomfort evolved into a quiet but powerful determination to be part of the change. I knew that menstruation, a natural biological process, deserved to be treated with dignity, care, and above all — respect.</p>
                 </div>
             </section>
 
-            <section class="mission-section">
-                <h2 class="mission-title">Our Mission</h2>
-                <p class="mission-text">At AMARA, our mission is to revolutionize period care by providing innovative,
-                    organic sanitary pads that empower women to live life on their terms. We strive to break taboos
-                    surrounding menstruation, promote sustainable practices, and ensure that every woman has access to
-                    healthy and eco-friendly menstrual solutions.</p>
-            </section>
-
             <section class="values-section">
-                <h2>Empowerment</h2>
-                <p>We believe in empowering women to take control of their health and well-being.</p>
-
-                <h2>Sustainability</h2>
-                <p>We are committed to creating products that are not only good for you but also for the planet.
-                    Innovation: We continuously seek new ways to improve our products and services.</p>
-
-                <button class="load-more-btn">Load More</button>
+                <h2>The Birth of AMARA</h2>
+                <p>AMARA was born from that passion — a desire to empower women with period care that truly prioritizes their health, comfort, and confidence. But beyond just a product, AMARA represents a deeper commitment: to challenge the outdated narratives around menstruation and replace them with education, empathy, and empowerment.</p>
+                <p>Our sanitary napkins are made with certified organic materials, free from harmful chemicals, and designed to be gentle on the skin while being kind to the environment. We have worked tirelessly to ensure that every product we create meets the highest standards of quality, hygiene, and sustainability — because we believe that what we use on our bodies matters.</p>
             </section>
+
+            <section class="values-section hidden-content" style="display: none;">
+                <h2>More Than a Brand – A Movement</h2>
+                <p>At its core, AMARA is not just a brand. It's a movement — one that aims to redefine how we think, talk, and feel about periods. Our mission goes beyond selling sanitary products; we are working to break down the taboos, open up conversations, and create a community where menstruation is acknowledged and accepted as a natural, powerful part of life.</p>
+                <p>Through workshops, educational initiatives, and community outreach, we're striving to ensure that every girl and woman feels informed, empowered, and unashamed of her body. We want to build a future where no woman is held back — in school, at work, or in her personal life — just because she's menstruating.</p>
+
+                <h2>Thank You for Walking With Us</h2>
+                <p>To everyone who has supported us — whether by choosing AMARA, sharing our story, or simply starting a conversation — thank you. Your belief in our vision fuels our mission every single day.</p>
+                <p>This is only the beginning. Together, let's continue to build a world where every woman can thrive, not in spite of her period, but alongside it — with pride, comfort, and strength.</p>
+            </section>
+
+            <button class="load-more-btn" onclick="toggleContent()">Load More</button>
         </main>
     </div>
 
@@ -122,10 +111,31 @@
         </div>
     </footer>
 
+    <!-- Loader -->
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    
+    <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="firebase-config.js"></script>
     <script src="auth-state.js"></script>
+    <script>
+        function toggleContent() {
+            const hiddenContent = document.querySelector('.hidden-content');
+            const loadMoreBtn = document.querySelector('.load-more-btn');
+            
+            if (hiddenContent.style.display === 'none') {
+                hiddenContent.style.display = 'block';
+                loadMoreBtn.textContent = 'Show Less';
+            } else {
+                hiddenContent.style.display = 'none';
+                loadMoreBtn.textContent = 'Load More';
+            }
+        }
+    </script>
 </body>
 
 </html>
