--- a/about.html
+++ b/about.html
@@ -141,6 +141,12 @@
     <div class="loader-container">
         <div class="loader"></div>
     </div>
+    
+    <!-- Firebase Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="firebase-config.js"></script>
     <script src="auth-state.js"></script>
 </body>
 </html> 
