--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="#pricing">Review</a></li>
+                    <li><a href="reviews.html">Review</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
@@ -126,27 +126,7 @@
         <section class="testimonials">
             <h2>Our Happy Clients</h2>
             <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <h4>Sarah Johnson</h4>
-                        <p>The product quality is amazing! I've been using it for months and can see the difference. Highly recommended!</p>
-                    </div>
-                    <div class="rating">★★★★★</div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <h4>Jessica Williams</h4>
-                        <p>Best natural skincare product I've ever used. The results are visible from day one.</p>
-                    </div>
-                    <div class="rating">★★★★★</div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <h4>Priya Sharma</h4>
-                        <p>Love how gentle it is on my sensitive skin. Will definitely purchase again!</p>
-                    </div>
-                    <div class="rating">★★★★★</div>
-                </div>
+                <!-- Dynamic testimonials will be loaded here by testimonials.js -->
             </div>
         </section>
 
@@ -230,6 +210,12 @@
     <div class="loader-container">
         <div class="loader"></div>
     </div>
+    <!-- Firebase Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="firebase-config.js"></script>
     <script src="auth-state.js"></script>
+    <script src="testimonials.js"></script>
 </body>
 </html> 
