--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
             <h2>Welcome Back</h2>
             <p class="auth-subtitle">Login to your account</p>
             
-            <form class="auth-form" id="loginForm">
+            <form class="auth-form" id="loginForm" onsubmit="return false;">
                 <div class="form-group">
                     <label for="loginIdentifier">Email or Phone Number</label>
                     <input type="text" id="loginIdentifier" name="loginIdentifier" required>
@@ -104,9 +104,9 @@
     </div>
     
     <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="firebase-config.js"></script>
     <script src="auth.js"></script>
 </body>
