--- a/policy.html
+++ b/policy.html
@@ -158,9 +158,11 @@
         <div class="loader"></div>
     </div>
     
+    <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="firebase-config.js"></script>
     <script src="auth-state.js"></script>
 </body>
 </html> 
