Adds all things

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>Experience the richness of nature with Rasa's cold pressed mustard oils and coconut oils — crafted for your well-being and your kitchen.</p>
                 <div class="hero-buttons">
                     <button class="btn-primary">Shop now</button>
-                    <a href="#learn-more" class="btn-secondary">Learn more →</a>
+                    <a href="product.html" class="btn-secondary">Learn more →</a>
                 </div>
                 <img src="assets/flower-image.svg" alt="" class="decorative-flower-bottom">
             </div>
@@ -78,7 +78,7 @@
                 <div class="product-description">
                     <h3>Describe feature one</h3>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-                    <a href="#learn-more" class="learn-more">Learn More about me→</a>
+                    <a href="product.html" class="learn-more">Learn More about me→</a>
                 </div>
                 <div class="product-images">
                     <img src="assets/product-1.png" alt="Esay Share Product" class="product-img-main">
