--- a/policy.html
+++ b/policy.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="legal.css">
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="policy.html" class="active">Policy</a></li>
+                    <li><a href="policy.html">Policy</a></li>
                     <li><a href="#pricing">Review</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
@@ -41,81 +41,67 @@
 
     <main class="legal-content">
         <div class="legal-container">
-            <section class="policy-section">
-                <h1>Privacy Policy</h1>
-                <p class="last-updated">Last Updated: March 14, 2024</p>
+            <h1>Privacy Policy</h1>
+            
+            <section class="legal-section">
+                <h2>What Information We Collect</h2>
+                <ul class="legal-list">
+                    <li>We collect personal details such as your name, email address, shipping address, and payment information when you place an order or contact us.</li>
+                    <li>We may automatically collect website usage data like your IP address, browser type, and the pages you visit to improve your experience.</li>
+                </ul>
+            </section>
 
-                <div class="policy-content">
-                    <section>
-                        <h2>Information We Collect</h2>
-                        <p>We collect information that you provide directly to us, including:</p>
-                        <ul>
-                            <li>Name and contact information</li>
-                            <li>Account credentials</li>
-                            <li>Payment information</li>
-                            <li>Shipping address</li>
-                            <li>Communication preferences</li>
-                        </ul>
-                    </section>
+            <section class="legal-section">
+                <h2>How We Use Your Information</h2>
+                <ul class="legal-list">
+                    <li>We use your information to process and deliver your orders smoothly.</li>
+                    <li>We use it to communicate updates, special offers, and important information.</li>
+                    <li>Your information helps us improve our products, services, and website.</li>
+                    <li>We also use it to comply with legal requirements and protect our rights.</li>
+                </ul>
+            </section>
 
-                    <section>
-                        <h2>How We Use Your Information</h2>
-                        <p>We use the information we collect to:</p>
-                        <ul>
-                            <li>Process your orders and payments</li>
-                            <li>Communicate with you about your orders</li>
-                            <li>Send you marketing communications (with your consent)</li>
-                            <li>Improve our products and services</li>
-                            <li>Protect against fraud and unauthorized transactions</li>
-                        </ul>
-                    </section>
+            <section class="legal-section">
+                <h2>Sharing Your Information</h2>
+                <ul class="legal-list">
+                    <li>We do not sell or rent your personal information to third parties.</li>
+                    <li>We only share your data with trusted partners who assist with order fulfillment, payment processing, or marketing — and they must keep your information confidential.</li>
+                    <li>We may disclose your information if required by law or to protect our rights.</li>
+                </ul>
+            </section>
 
-                    <section>
-                        <h2>Information Sharing</h2>
-                        <p>We do not sell your personal information. We share your information only with:</p>
-                        <ul>
-                            <li>Service providers who assist in our operations</li>
-                            <li>Payment processors for secure transactions</li>
-                            <li>Shipping partners for order delivery</li>
-                            <li>Legal authorities when required by law</li>
-                        </ul>
-                    </section>
+            <section class="legal-section">
+                <h2>How Long We Keep Your Data</h2>
+                <ul class="legal-list">
+                    <li>We retain your personal information only as long as needed to provide our services, meet legal obligations, and resolve any issues.</li>
+                </ul>
+            </section>
 
-                    <section>
-                        <h2>Your Rights</h2>
-                        <p>You have the right to:</p>
-                        <ul>
-                            <li>Access your personal information</li>
-                            <li>Correct inaccurate information</li>
-                            <li>Request deletion of your information</li>
-                            <li>Opt-out of marketing communications</li>
-                            <li>Data portability</li>
-                        </ul>
-                    </section>
+            <section class="legal-section">
+                <h2>Children's Privacy</h2>
+                <ul class="legal-list">
+                    <li>Our products and website are not intended for children under 13.</li>
+                    <li>We do not knowingly collect personal information from children under 13.</li>
+                    <li>If you believe we have collected information from a child under 13, please contact us so we can remove it.</li>
+                </ul>
+            </section>
 
-                    <section>
-                        <h2>Security</h2>
-                        <p>We implement appropriate technical and organizational measures to protect your personal information, including:</p>
-                        <ul>
-                            <li>Encryption of sensitive data</li>
-                            <li>Secure payment processing</li>
-                            <li>Regular security assessments</li>
-                            <li>Employee training on data protection</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2>Contact Us</h2>
-                        <p>If you have any questions about our Privacy Policy, please contact us at:</p>
-                        <div class="contact-info">
-                            <p>Email: privacy@amara.com</p>
-                            <p>Phone: +1 (555) 123-4567</p>
-                            <p>Address: 123 Beauty Lane, NY 10001</p>
-                        </div>
-                    </section>
-                </div>
+            <section class="legal-section">
+                <h2>How We Protect Your Data</h2>
+                <ul class="legal-list">
+                    <li>We use advanced security measures to protect your personal data from unauthorized access, alteration, or disclosure</li>
+                </ul>
             </section>
         </div>
+
+        <section class="contact-section">
+            <h3>Have questions or concerns about your privacy? We're here to help!</h3>
+            <p>Email: info@amaraorganic.com</p>
+            <form class="contact-form">
+                <input type="email" placeholder="Enter Your Email">
+                <button type="submit">Continue</button>
+            </form>
+        </section>
     </main>
 
     <footer class="footer">
@@ -140,7 +126,7 @@
                     <input type="email" placeholder="Enter your email">
                     <button type="submit">Subscribe</button>
                 </form>
-                <p>By subscribing you agree to with our <a href="terms.html">Privacy Policy</a></p>
+                <p>By subscribing you agree to with our <a href="policy.html">Privacy Policy</a></p>
             </div>
         </div>
         <div class="footer-bottom">
