Adds final touch

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="#pricing">Review</a></li>
+                    <li><a href="reviews.html">Review</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
                 <div class="text-content">
                     <div class="quote-mark">"</div>
                     <p class="quote-text">As a woman, I always felt that period care products should be more honest, safer, and made with real care. Amara is my promise to every woman - that you don't have to compromise on comfort, health, or sustainability. Let's make periods better, together.</p>
-                    <h3 class="quote-author">Isha Qureshi</h3>
+                    <h3 class="quote-author">-Isha Qureshi</h3>
                 </div>
                 <div class="image-content">
                     <img src="assets/founder.png" alt="Founder">
@@ -67,11 +67,11 @@
         <section class="about-section">
             <div class="content-wrapper">
                 <div class="image-content">
-                    <img src="assets/founder.png" alt="Brand Story">
+                    <img src="assets/ab-2.png" alt="Brand Story">
                 </div>
                 <div class="text-content">
                     <h2>Our Brand Story</h2>
-                    <p>At Amara, we believe that every woman deserves a period care experience that is safe, gentle, and kind to the body. Our journey started with one mission in mind - to create pads that are soft on skin, provide protection, and kind to the planet.</p>
+                    <p>At Amara, we believe that every woman deserves a period care experience that is safe, gentle, and worry-free. Our journey started with one mission: to create sanitary pads that are soft on skin, strong on protection, and kind to the planet. We saw that many traditional pads are made with synthetic materials and chemicals that can cause discomfort, rashes, or even health concerns. That's why we created Amara – a brand that truly cares about women's wellness and the environment.</p>
                 </div>
             </div>
         </section>
@@ -81,10 +81,10 @@
             <div class="content-wrapper">
                 <div class="text-content">
                     <h2>Our Vision</h2>
-                    <p>At AMARA, our mission is to revolutionize period care by providing innovative, organic sanitary pads that empower women to live life on their terms. We aim to break taboos surrounding menstruation, promote sustainable practices, and ensure that every woman has access to healthy and eco-friendly menstrual solutions.</p>
+                    <p>At AMARA, our mission is to revolutionize period care by providing innovative, organic sanitary pads that empower women to live life on their terms. We strive to break taboos surrounding menstruation, promote sustainable practices, and ensure that every woman has access to healthy and eco-friendly menstrual solutions.</p>
                 </div>
                 <div class="image-content">
-                    <img src="assets/founder.png" alt="Vision">
+                    <img src="assets/ab-3.png" alt="Vision">
                 </div>
             </div>
         </section>
@@ -93,11 +93,11 @@
         <section class="about-section">
             <div class="content-wrapper">
                 <div class="image-content">
-                    <img src="assets/founder.png" alt="Sustainability">
+                    <img src="assets/ab-4.png" alt="Sustainability">
                 </div>
                 <div class="text-content">
                     <h2>Sustainability Practices</h2>
-                    <p>We care deeply about the Earth we live on. That's why we've made it our goal to reduce waste and support a cleaner future. We use certified organic cotton grown without harmful pesticides. Our packaging is minimal and made from recycled materials with a low carbon footprint.</p>
+                    <p>We care deeply about the Earth we live on. That's why we've made it our goal to reduce waste and support a cleaner future. We use certified organic cotton grown without harmful pesticides. Our packaging is recyclable and minimal to reduce our footprint. All our products are cruelty-free and dermatologically tested. We support eco-education and period awareness through our blog and community.</p>
                 </div>
             </div>
         </section>
@@ -109,13 +109,15 @@
         </div>
         <div class="footer-content">
             <div class="footer-left">
-                <a href="#" class="footer-logo">AMARA</a>
+                <a href="index.html" class="footer-logo">
+                    <img src="assets/logo-desc.png" alt="AMARA">
+                </a>
                 <nav class="footer-nav">
-                    <a href="#home">Home</a>
-                    <a href="#shop">Shop</a>
-                    <a href="#about">About</a>
-                    <a href="#blog">Blog</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html">Home</a>
+                    <a href="product.html">Shop</a>
+                    <a href="about.html">About</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
                     <a href="policy.html">Policy</a>
                     <a href="terms.html">Condition</a>
                 </nav>
