--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="feature-image">
-                    <img src="assets/pad-image.png" alt="Product Feature" class="center-image">
+                    <img src="assets/pad.png" alt="Product Feature" class="center-image">
                 </div>
 
                 <div class="feature-right">
@@ -149,7 +149,7 @@
             <h2>Certification</h2>
             <div class="certification-container">
                 <div class="certification-image">
-                    <img src="assets/certificate.png" alt="Certification Process">
+                    <img src="assets/certificates.png" alt="Certification Process">
                 </div>
                 <div class="certification-badges">
                     <div class="badge">
@@ -158,13 +158,13 @@
                         <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
                     </div>
                     <div class="badge">
-                        <img src="assets/leaf-icon.svg" alt="" class="badge-icon">
-                        <h4>100% Organic</h4>
+                        <img src="assets/vector.svg" alt="" class="badge-icon">
+                        <h4>Dermatologically Tested</h4>
                         <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
                     </div>
                     <div class="badge">
-                        <img src="assets/leaf-icon.svg" alt="" class="badge-icon">
-                        <h4>100% Organic</h4>
+                        <img src="assets/drop-icon.svg" alt="" class="badge-icon">
+                        <h4>Eco-Friendly</h4>
                         <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
                     </div>
                 </div>
@@ -178,15 +178,17 @@
         </div>
         <div class="footer-content">
             <div class="footer-left">
-                <a href="#" class="footer-logo">AMARA</a>
+                <a href="#" class="footer-logo">
+                    <img src="assets/logo-desc.png" alt="AMARA">
+                </a>
                 <nav class="footer-nav">
-                    <a href="#home">Home</a>
-                    <a href="#shop">Shop</a>
-                    <a href="#about">About</a>
-                    <a href="#blog">Blog</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#contact">Policy</a>
-                    <a href="#contact">Condition</a>
+                    <a href="index.html">Home</a>
+                    <a href="product.html">Shop</a>
+                    <a href="about.html">About</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="policy.html">Policy</a>
+                    <a href="terms.html">Condition</a>
                 </nav>
             </div>
             <div class="footer-subscribe">
