--- a/product.html
+++ b/product.html
@@ -44,11 +44,11 @@
             <div class="product-details">
                 <div class="product-images">
                     <img src="assets/p-1.png" alt="Organic Cotton Pads" class="main-image">
-                    <div class="thumbnail-container">
+                    <!-- <div class="thumbnail-container">
                         <img src="assets/p-2.png" alt="Pink packaging" class="thumbnail">
                         <img src="assets/p-3.png" alt="Blue packaging" class="thumbnail">
                         <img src="assets/p-4.png" alt="Purple packaging" class="thumbnail">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="product-info">
                     <h1 class="product-title">Organic Cotton Pads - Regular</h1>
