--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
             </div>
             <div class="nav-right">
                 <div class="auth-buttons">
-                    <a href="login.html" class="login-btn active">Login</a>
+                    <a href="login.html" class="active">Login</a>
                     <a href="register.html" class="signup-btn">Sign up</a>
                 </div>
             </div>
@@ -69,13 +69,15 @@
         </div>
         <div class="footer-content">
             <div class="footer-left">
-                <a href="#" class="footer-logo">AMARA</a>
+                <a href="index.html" class="footer-logo">
+                    <img src="assets/logo-desc.png" alt="AMARA">
+                </a>
                 <nav class="footer-nav">
-                    <a href="#home">Home</a>
-                    <a href="#shop">Shop</a>
-                    <a href="#about">About</a>
-                    <a href="#blog">Blog</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html">Home</a>
+                    <a href="product.html">Shop</a>
+                    <a href="about.html">About</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
                     <a href="policy.html">Policy</a>
                     <a href="terms.html">Condition</a>
                 </nav>
