--- a/organic.html
+++ b/organic.html
@@ -31,7 +31,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="#pricing">Review</a></li>
+                    <li><a href="reviews.html">Review</a></li>
                     <li><a href="organic.html" class="active">Why Organic</a></li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
         <section class="organic-section">
             <div class="content-wrapper">
                 <div class="image-content">
-                    <img src="assets/organic.png" alt="EVOLVE organic product packaging with cotton">
+                    <img src="assets/organic-1.png" alt="EVOLVE organic product packaging with cotton">
                 </div>
                 <div class="text-content">
                     <h2>What You Put In Your Body Matters</h2>
@@ -74,8 +74,8 @@
             <div class="comparison-table">
                 <div class="table-row header">
                  <div class="column" style="font-weight: bold;">How To Use</div>
-                    <div class="column highlight" style="font-weight: bold;">How To Use</div>
-                    <div class="column" style="font-weight: bold;">How To Use</div>
+                    <div class="column highlight" style="font-weight: bold;">Amara organic Pads</div>
+                    <div class="column" style="font-weight: bold;">Conventional Pads</div>
                 </div>
                 <div class="table-row">
                     <div class="column">Materials</div>
@@ -158,7 +158,7 @@
             <h2>Environmental Impact</h2>
             <div class="environmental-content">
                 <div class="image-side">
-                    <img src="assets/enviroment.png" alt="Environmental impact illustration">
+                    <img src="assets/environment.png" alt="Environmental impact illustration">
                 </div>
                 <div class="content-side">
                     <div class="impact-group">
@@ -193,13 +193,15 @@
         </div>
         <div class="footer-content">
             <div class="footer-left">
-                <a href="#" class="footer-logo">AMARA</a>
+                <a href="index.html" class="footer-logo">
+                    <img src="assets/logo-desc.png" alt="AMARA">
+                </a>
                 <nav class="footer-nav">
-                    <a href="#home">Home</a>
-                    <a href="#shop">Shop</a>
-                    <a href="#about">About</a>
-                    <a href="#blog">Blog</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html">Home</a>
+                    <a href="product.html">Shop</a>
+                    <a href="about.html">About</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
                     <a href="policy.html">Policy</a>
                     <a href="terms.html">Condition</a>
                 </nav>
