--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <h1>Soft on Skin, Strong on Protection</h1>
                 <p>Experience the richness of nature with Rasa's cold pressed mustard oils and coconut oils — crafted for your well-being and your kitchen.</p>
                 <div class="hero-buttons">
-                    <button class="btn-primary">Shop now</button>
+                    <a href="https://wa.me/919999122290" class="btn-primary">Shop now</a>
                     <a href="product.html" class="btn-secondary">Learn more →</a>
-                </div>
+                </div>                            
                 <img src="assets/flower-image.svg" alt="" class="decorative-flower-bottom">
             </div>
             <div class="hero-image">
