--- a/product.html
+++ b/product.html
@@ -159,13 +159,15 @@
         </div>
         <div class="footer-content">
             <div class="footer-left">
-                <a href="#" class="footer-logo">AMARA</a>
+                <a href="index.html" class="footer-logo">
+                    <img src="assets/logo-desc.png" alt="AMARA">
+                </a>
                 <nav class="footer-nav">
-                    <a href="#home">Home</a>
-                    <a href="#shop">Shop</a>
-                    <a href="#about">About</a>
-                    <a href="#blog">Blog</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html">Home</a>
+                    <a href="product.html">Shop</a>
+                    <a href="about.html">About</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html">Contact</a>
                     <a href="policy.html">Policy</a>
                     <a href="terms.html">Condition</a>
                 </nav>
