Refactors why organic 2

--- a/organic.html
+++ b/organic.html
@@ -73,7 +73,7 @@
             <h2>Organic vs. Conventional: The Comparison</h2>
             <div class="comparison-table">
                 <div class="table-row header">
-                 <div class="column" style="font-weight: bold;">How To Use</div>
+                 <div class="column" style="font-weight: bold;">Features</div>
                     <div class="column highlight" style="font-weight: bold;">Amara organic Pads</div>
                     <div class="column" style="font-weight: bold;">Conventional Pads</div>
                 </div>
