--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="reviews.html">Review</a></li>
+                    <li><a href="product.html">Product</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
@@ -51,7 +51,8 @@
             <div class="hero-content">
                 <img src="assets/leave-image.svg" alt="" class="decorative-leaf-left">
                 <h1>Soft on Skin, Strong on Protection</h1>
-                <p>Experience the richness of nature with Rasa's cold pressed mustard oils and coconut oils — crafted for your well-being and your kitchen.</p>
+                <p>AMĀRA-Organic period care is uniquely crafted by Indian women for Indian women, combining
+                    100% organic materials with anti-bacterial safety tailored to local needs</p>
                 <div class="hero-buttons">
                     <a href="https://wa.me/919999122290" class="btn-primary">Shop now</a>
                     <a href="product.html" class="btn-secondary">Learn more →</a>
@@ -67,7 +68,6 @@
                             <img src="assets/product.svg" alt="PureCare Product" class="product-image">
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -77,7 +77,16 @@
             <div class="product-showcase">
                 <div class="product-description">
                     <h3>Describe feature one</h3>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+                    <p>AMĀRA-Organic period care is designed by Indian women to address the specific menstrual
+                        health needs of the Indian population, prioritizing cultural preferences, comfort, and safety. The
+                        products are crafted with 100% organic cotton, ensuring breathability and reducing skin irritation
+                        for sensitive skin common in tropical climates. They incorporate anti-bacterial properties to
+                        combat infections exacerbated by humidity and hygiene challenges, offering protection tailored to
+                        local environmental conditions. By avoiding synthetic chemicals and plastics, AMĀRA emphasizes
+                        eco-consciousness and body safety, aligning with the growing demand for sustainable, healthfocused
+                        menstrual solutions in India. The design considers diverse flow levels and body types,
+                        providing reliable absorbency and comfort while empowering women with a product rooted in
+                        their lived experience.</p>
                     <a href="product.html" class="learn-more">Learn More about me→</a>
                 </div>
                 <div class="product-images">
@@ -128,6 +137,10 @@
             <div class="testimonials-grid">
                 <!-- Dynamic testimonials will be loaded here by testimonials.js -->
             </div>
+        </section>
+
+        <section class="testimonials-button">
+            <a href="reviews.html">Read More Reviews</a>
         </section>
 
         <section class="newsletter-section">
