--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="#pricing">Review</a></li>
+                    <li><a href="product.html">Product</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
