--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="reviews.html">Review</a></li>
+                    <li><a href="product.html">Product</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
