--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="policy.html">Policy</a></li>
-                    <li><a href="reviews.html">Review</a></li>
+                    <li><a href="product.html" class="active">Product</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
@@ -112,11 +112,11 @@
 
         <section class="reviews-section">
             <div class="reviews-nav">
-                <div class="nav-links">
+                <div class="p-nav-links">
                     <a href="#reviews" class="active">Reviews</a>
                     <a href="#faqs">FAQs</a>
                 </div>
-                <button class="write-review-btn">Write a Review</button>
+                <a href="reviews.html" class="write-review-btn">Write a Review</a>
             </div>
 
             <div class="reviews-content">
@@ -225,12 +225,12 @@
         });
 
         // Reviews and FAQs tab functionality
-        document.querySelectorAll('.nav-links a').forEach(link => {
+        document.querySelectorAll('.p-nav-links a').forEach(link => {
             link.addEventListener('click', (e) => {
                 e.preventDefault();
                 
                 // Remove active class from all links
-                document.querySelectorAll('.nav-links a').forEach(l => l.classList.remove('active'));
+                document.querySelectorAll('.p-nav-links a').forEach(l => l.classList.remove('active'));
                 
                 // Add active class to clicked link
                 link.classList.add('active');
