--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
         <section class="about-section">
             <div class="content-wrapper">
                 <div class="image-content">
-                    <img src="assets/ab-2.png" alt="Brand Story">
+                    <img src="assets/abo-2.png" alt="Brand Story">
                 </div>
                 <div class="text-content">
                     <h2>Our Brand Story</h2>
