--- a/organic.html
+++ b/organic.html
@@ -55,7 +55,7 @@
         <section class="organic-section">
             <div class="content-wrapper">
                 <div class="image-content">
-                    <img src="assets/organic-1.png" alt="EVOLVE organic product packaging with cotton">
+                    <img src="assets/org-1.png" alt="EVOLVE organic product packaging with cotton">
                 </div>
                 <div class="text-content">
                     <h2>What You Put In Your Body Matters</h2>
