--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
 
         <section class="features">
-            <h2>Medium length section<br>heading goes here</h2>
+            <h2>Unique Selling Proposition</h2>
             <p class="subtitle">At Amara, we care deeply about your comfort, health, and the planet. That's why we create organic sanitary pads that are soft, safe, and sustainable.</p>
             
             <div class="features-grid">
