--- a/product.html
+++ b/product.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="product-info">
                     <h1 class="product-title">Organic Cotton Pads - Regular</h1>
-                    <div class="product-price">$9.90</div>
+                    <div class="product-price">₹140.00</div>
                     <p class="product-description">
                         Experience ultimate comfort with our 100% organic cotton pads. 
                         Designed for medium flow days, these pads provide reliable 
