--- a/product.html
+++ b/product.html
@@ -43,7 +43,7 @@
         <div class="product-container">
             <div class="product-details">
                 <div class="product-images">
-                    <img src="assets/pro-1.png" alt="Organic Cotton Pads" class="main-image">
+                    <img src="assets/product10.png" alt="Organic Cotton Pads" class="main-image">
                     <!-- <div class="thumbnail-container">
                         <img src="assets/p-2.png" alt="Pink packaging" class="thumbnail">
                         <img src="assets/p-3.png" alt="Blue packaging" class="thumbnail">
