--- a/about.html
+++ b/about.html
@@ -23,7 +23,12 @@
                     <img src="assets/logo-dark.png" alt="AMARA">
                 </a>
             </div>
-            <div>
+            <button class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
