--- a/product.html
+++ b/product.html
@@ -19,7 +19,12 @@
                     <img src="assets/logo-dark.png" alt="AMARA">
                 </a>
             </div>
-            <div>
+            <button class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -316,5 +321,6 @@
             });
         });
     </script>
+
 </body>
 </html> 
