--- a/terms.html
+++ b/terms.html
@@ -19,13 +19,18 @@
                     <img src="assets/logo-dark.png" alt="AMARA">
                 </a>
             </div>
-            <div>
+            <button class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="policy.html">Policy</a></li>
+                    <li><a href="policy.html" class="active">Policy</a></li>
                     <li><a href="product.html">Product</a></li>
                     <li><a href="organic.html">Why Organic</a></li>
                 </ul>
