--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2>Our Product</h2>
             <div class="product-showcase">
                 <div class="product-description">
-                    <h3>Describe feature one</h3>
+                    <h3>" Backed by Woman, Built for Woman "</h3>
                     <p>AMĀRA-Organic period care is designed by Indian women to address the specific menstrual
                         health needs of the Indian population, prioritizing cultural preferences, comfort, and safety. The
                         products are crafted with 100% organic cotton, ensuring breathability and reducing skin irritation
@@ -104,7 +104,7 @@
         </section>
 
         <section class="features">
-            <h2>Unique Selling Proposition</h2>
+            <h2>Why Choose AMĀRA</h2>
             <p class="subtitle">At Amara, we care deeply about your comfort, health, and the planet. That's why we create organic sanitary pads that are soft, safe, and sustainable.</p>
             
             <div class="features-grid">
